Created first draft for landing page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-Landing Page
+<!DOCTYPE html>
+<html lang="en-US">
+<head>
+    <meta charset=utf-8>
+    <meta name=viewport content="width=device-width, initial-scale=1">
+    <title>Project Lemon - GitHub</title>
+    <link rel="stylesheet" type="text/css" href="css/reset.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,300' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+</head>
+
+<body>
+    <div id="main-wrapper">
+        <div class="bg-overlay">
+        <div id="centered-content">
+            <div id="logo-wrapper">
+                <img src="img/logo-text.png" alt="Company logo representing a lemon" />    
+            </div> 
+            <div id="button-container">
+                <a href="https://github.com/ProjectLemon" class="std-button"><i class="fa fa-github"></i> Find us on github!</a>
+            </div>
+        </div> <!--End cetntered-content-->
+        </div>
+    </div>  <!--End main-wrapper-->
+</body>
+</html>
