Add: search engine friendly info

--- a/index.html
+++ b/index.html
@@ -42,15 +42,18 @@
 <body>
     <div id="main-wrapper">
         <div class="bg-overlay">
-        <div id="centered-content">
-            <div id="logo-wrapper">
-                <img src="img/logo-text.png" alt="Company logo representing a lemon" />    
-            </div> 
-            <div id="button-container">
-                <a href="https://github.com/ProjectLemon" class="std-button"><i class="fa fa-github"></i> Find us on github!</a>
-            </div>
-        </div> <!--End cetntered-content-->
-        </div>
+            <div id="centered-content">
+                <div id="logo-wrapper">
+                    <img src="img/logo-text.png" alt="Project Lemon logo" />    
+                </div> 
+                <div id="button-container">
+                    <a href="https://github.com/ProjectLemon" class="std-button"><i class="fa fa-github"></i> Find us on github!</a>
+                </div>
+            </div> <!--End cetntered-content-->
+            <footer>
+                &copy; Project Lemon - an open source project by Interaction Design students at Ume&Aring; University.
+            </footer>
+        </div> <!--End bg-overlay-->
     </div>  <!--End main-wrapper-->
 </body>
 </html>
