Search engine optimizations

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset=utf-8>
     <meta name=viewport content="width=device-width, initial-scale=1">
     <title>Project Lemon - GitHub</title>
+    <meta name=description content="Project Lemon is an open source project founded and driven by a group of interaction
+    design students at Umeå University. We share a passion for digital creation and graphical design. This passion is 
+    chanalized over on github. We really think you should check us out and feel fre to contribute and grow with us.">
     <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,300' rel='stylesheet' type='text/css'>
