Blured more of the background, and modified the github button

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 </div>
             </div> <!--End cetntered-content-->
             <footer>
-                &copy; Project Lemon - an open source project by Interaction Design students at Ume&Aring; University.
+                &copy; Project Lemon - an open source project by Interaction Design students at Ume&aring; University.
             </footer>
         </div> <!--End bg-overlay-->
     </div>  <!--End main-wrapper-->
