--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@ redirect_from:
         {% if post.category and post.tags.size > 0 %}
           
           Posted in <a class="category" href="{{ category_url }}">{{ post.category }}</a>
-          with <span class="icon">{% include /vectors/tags-icon.svg %}</span>: {% for tag in post.tags %}<a class="tag" href="/blog/tags#{{ tag }}">{{ tag | capitalize}}</a>{% if forloop.last == false %}, {% endif %}{% endfor %}
+          with <span class="icon">{% include /vectors/tags-icon.svg %}</span>: {% for tag in post.tags %}<a class="tag" href="/blog/tags/#{{ tag }}">{{ tag | capitalize}}</a>{% if forloop.last == false %}, {% endif %}{% endfor %}
         {% elsif post.tags.size > 0 %}
-          <span class="icon">{% include /vectors/tags-icon.svg %}</span>: {% for tag in post.tags %}<a class="tag" href="/blog/tags#{{ tag }}">{{ tag | capitalize }}</a>{% if forloop.last == false %}, {% endif %}{% endfor %}
+          <span class="icon">{% include /vectors/tags-icon.svg %}</span>: {% for tag in post.tags %}<a class="tag" href="/blog/tags/#{{ tag }}">{{ tag | capitalize }}</a>{% if forloop.last == false %}, {% endif %}{% endfor %}
         {% elsif post.category %}
           Posted in <a class="category" href="{{ category_url }}">{{ post.category }}</a>
         {% endif %}
