--- a/tags.html
+++ b/tags.html
@@ -9,11 +9,16 @@ permalink: /blog/tags
 {% if site.tags.size > 0 %}
   <!-- Linear search for max usage -->
   {% assign tags_max = 0 %}
+  
+  <div class="tag-collection">
   {% for tag in site.tags %}
       {% if tag[1].size > tags_max %}
           {% assign tags_max = tag[1].size %}
       {% endif %}
+      
+      <a href="#{{ tag | first }}" class="category">{{ tag | first }}</a>
   {% endfor %}
+  </div>
   
   
   <ul>
@@ -25,14 +30,15 @@ permalink: /blog/tags
         {% assign t = tag | first %}
         {% assign posts = tag | last %}
         
-        <li class="big-list-content">
+        <li id="{{ t }}" class="big-list-content">
           <h1 class="subtitle">{{ t | capitalize }}</h1>
           <ul>
           {% for post in posts %}
             {% if post.tags contains t %}
-            <li id="{{ post.title }}" class="medium-list-content">
+            <li class="medium-list-content">
               <a href="{{ post.url }}">{{ post.title }}</a>
-              <span class="date right">{{ post.date | date: "%B %-d, %Y"  }}</span>
+              <span> - </span>
+              <span class="date">{{ post.date | date: "%B %-d, %Y"  }}</span>
             </li>
             {% endif %}
           {% endfor %}
